--- a/README.me
+++ b/README.me
@@ -1,1 +1,6 @@
-#PUT CVS AND XLSX IN DATA FOLDER AND RUN "python extract-data.py"
+#1 PUT CVS AND XLSX IN DATA FOLDER AND RUN "python extract-data.py"
+#2 Run: python main.py --user your_username --password your_password --host localhost --database your_database
+#3 --user your_username: Replace your_username with your actual MySQL username.
+--password your_password: Replace your_password with your actual MySQL password.
+--host localhost: Replace localhost with your database host (if it’s different from localhost).
+--database your_database: Replace your_database with the name of your database.
